--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <link rel="stylesheet" href="style.css">
+        <link rel="javascript" href="script.js">
 
     </head>
     <body>
